# optimized_rocwmma_samples

./: CMakeLists.txt  README.md  README_zh.md  benchmark.sh  build.sh  common.hpp  rocwmma_batched_contraction.cpp  rocwmma_batched_gemm.cpp  rocwmma_elementwise.cpp  rocwmma_flatmm.cpp  rocwmma_fmha_fwd.cpp  rocwmma_fused_moe.cpp  rocwmma_gemm_multi_d.cpp  rocwmma_gemm_quantized.cpp  rocwmma_gemm_splitk.cpp  rocwmma_grouped_conv_fwd.cpp  rocwmma_grouped_gemm.cpp  rocwmma_img2col_gemm.cpp  rocwmma_layernorm2d.cpp  rocwmma_moe_smoothquant.cpp  rocwmma_moe_sorting.cpp  rocwmma_mx_gemm.cpp  rocwmma_perf_gemm.cpp  rocwmma_permute.cpp  rocwmma_pooling.cpp  rocwmma_reduce.cpp  rocwmma_rmsnorm2d.cpp  rocwmma_smoothquant.cpp  rocwmma_sparse_attn.cpp  rocwmma_streamk_gemm.cpp  rocwmma_tile_distr_reg_map.cpp  rocwmma_topk_softmax.cpp
